--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="shortcut icon" type="image/png" href="./img/ProgramadorFitness.png">
-  <link rel="apple-touch-icon" href="./img/ProgramadorFitness.png">
-  <link rel="apple-touch-startup-image" href="./img/ProgramadorFitness.png">
+  <link rel="apple-touch-icon" href="./img/images.png">
+  <link rel="apple-touch-startup-image" href="./img/images.png">
   <link rel="manifest" href="./manifest.json">
 
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
